--- a/danismanlikhizmetleri.html
+++ b/danismanlikhizmetleri.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Danışmanlıklar - Burçyora Astro</title>
+    <title>Danışmanlıklar - Burcyora Astro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Montserrat:wght@300;400&display=swap"
@@ -15,34 +15,27 @@
 
 <body class="consulting-page-body">
 
-    <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container">
-            <!-- <a class="navbar-brand logo-text" href="/index.html">BURCYORA ASTRO </a> -->
-            <a class="navbar-brand d-flex flex-column" href="/index.html" style="line-height: 1;">
-                <span class="logo-text">BURCYORA</span>
-                <span class="logo-slogan small" style="color: white">Sezgisel & Analitik Astroloji</span>
-            </a>
 
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
-            </button>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon" style="filter: invert(1);"></span>
+    </button>
 
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="/hakkimizda.html">Hakkımızda</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/danismanlikhizmetleri.html">Danışmanlık
-                                Hizmetleri</a>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="/blog.html">Gökyüzü Günlüğü</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/nedenbiz.html">Neden Biz?</a></li>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="/hakkimizda.html">Hakkımızda</a></li>
+                <li class="nav-item"><a class="nav-link" href="/danismanlikhizmetleri.html">Danışmanlık
+                        Hizmetleri</a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="/blog.php">Gökyüzü Günlüğü</a></li>
+                <li class="nav-item"><a class="nav-link" href="/nedenbiz.html">Neden Biz?</a></li>
 
-                        <li class="nav-item"><a class="nav-link btn-iletisim" href="/iletisim.html">İletişim</a></li>
-                    </ul>
-                </ul>
-            </div>
-        </div>
+                <li class="nav-item"><a class="nav-link btn-iletisim" href="/iletisim.html">İletişim</a></li>
+            </ul>
+        </ul>
+    </div>
+    </div>
     </nav>
     <section class="pricing-section">
         <div class="container">
