--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hakkımda - Burçyora Astro</title>
+    <title>Hakkımda - Burcyora Astro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Montserrat:wght@300;400&display=swap"
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <!-- <a class="navbar-brand logo-text" href="/index.html">BURCYORA ASTRO </a> -->
-            <a class="navbar-brand d-flex flex-column" href="/index.html" style="line-height: 1;">
+            <a class="navbar-brand d-flex flex-column" href="/index.php" style="line-height: 1;">
                 <span class="logo-text">BURCYORA</span>
                 <span class="logo-slogan small" style="color: white">Sezgisel & Analitik Astroloji</span>
             </a>
@@ -34,7 +34,7 @@
                         <li class="nav-item"><a class="nav-link" href="/danismanlikhizmetleri.html">Danışmanlık
                                 Hizmetleri</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="/blog.html">Gökyüzü Günlüğü</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/blog.php">Gökyüzü Günlüğü</a></li>
                         <li class="nav-item"><a class="nav-link" href="/nedenbiz.html">Neden Biz?</a></li>
 
                         <li class="nav-item"><a class="nav-link btn-iletisim" href="/iletisim.html">İletişim</a></li>
