--- a/iletisim.html
+++ b/iletisim.html
@@ -14,7 +14,6 @@
 </head>
 
 <body class="contact-page-body">
-
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <!-- <a class="navbar-brand logo-text" href="/index.html">BURCYORA ASTRO </a> -->
@@ -35,7 +34,7 @@
                         <li class="nav-item"><a class="nav-link" href="/danismanlikhizmetleri.html">Danışmanlık
                                 Hizmetleri</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="/blog.html">Gökyüzü Günlüğü</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/blog.php">Gökyüzü Günlüğü</a></li>
                         <li class="nav-item"><a class="nav-link" href="/nedenbiz.html">Neden Biz?</a></li>
 
                         <li class="nav-item"><a class="nav-link btn-iletisim" href="/iletisim.html">İletişim</a></li>
