--- a/nedenbiz.html
+++ b/nedenbiz.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <!-- <a class="navbar-brand logo-text" href="/index.html">BURCYORA ASTRO </a> -->
-            <a class="navbar-brand d-flex flex-column" href="/index.html" style="line-height: 1;">
+            <a class="navbar-brand d-flex flex-column" href="/index.php" style="line-height: 1;">
                 <span class="logo-text">BURCYORA</span>
                 <span class="logo-slogan small" style="color: white">Sezgisel & Analitik Astroloji</span>
             </a>
@@ -34,7 +34,7 @@
                         <li class="nav-item"><a class="nav-link" href="/danismanlikhizmetleri.html">Danışmanlık
                                 Hizmetleri</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="/blog.html">Gökyüzü Günlüğü</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/blog.php">Gökyüzü Günlüğü</a></li>
                         <li class="nav-item"><a class="nav-link" href="/nedenbiz.html">Neden Biz?</a></li>
 
                         <li class="nav-item"><a class="nav-link btn-iletisim" href="/iletisim.html">İletişim</a></li>
